# advent-of-code

./: .gitignore  2020.fsx  AdventOfCode.fsproj  AdventOfCode2020.sln  Day1.fs  Day16.fs  Day17.fs  Day18.fs  Day19.fs  Day2.fs  Day20.fs  Day21.fs  Day22.fs  Day23.fs  Day24.fs  Day25.fs  Day3.fs  Day4.fs  Day5.fs  Day6.fs  Day7.fs  Day8.fs  Day9.fs  Input.fs  Program.fs
.ionide/: symbolCache.db
2019/: .gitignore  build.gradle.kts  config.nims  day1.nim  day2.nim  day3.nim  day4.nim  deps.edn  input  input.nim  settings.gradle.kts
2019/src/: convert.clj  day01.clj  day04.clj
2019/test/: day01_test.clj  day04_test.clj  input.clj
2020/: .gitignore  AdventOfCode.sln  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Day17.fs  Day18.fs  Day19.fs  Day2.fs  Day23.fs  Day24.fs  Day3.fs  Day4.fs  Day6.fs  Day7.fs  Day8.fs  Input.fs  Program.fs
2021/: .gitignore  aoc.nim  aoc.nimble  benchmark.md  benchmark.sh  config.nims  day1.nim  day2.nim  format.sh  helpers.nim  input.nim  nim.cfg
2021/input/: day18.txt  day23.txt
2021/src/: aoc.nim  day01.nim  day02.nim  day03.nim  day04.nim  (+24 more)
2022/: .rubocop.yml  Gemfile  day01.rb  day02.rb  day03.rb  day04.rb  day05.rb  day06.rb  day07.rb  day08.rb  day09.rb  day10.rb  day11.rb  day12.rb  day13.rb  day14.rb  day15.rb  day16.rb  day17.rb  day18.rb  day19.rb  day20.rb  day21.rb  day22.rb  day23.rb  day24.rb  day25.rb  rakefile.rb
2023/: .gitignore
2023/day08/: .gitignore  CMakeLists.txt  day08.cpp  main.cpp  run.sh
2024/: day01.ua  day05.ua  day10.ua  day14.ua  day25.ua
2025/: .gitignore  Cargo.toml  benchmark
(+117 files in other folders)
